@@ -7,88 +7,6 @@
 
   o  restructure objects for `test' and `calpha' arguments
 
-Probleme mit multcomp 0.991-7
-
-####################################
-
-library(multcomp)
-
-#  1. base für type="Dunnett"
-
-# In contrMat gibt es ein argument um die 
-# Kontrolle in "Dunnett"-type contrasten zu wählen.
-# Kann man dieses Argument von mcp() oder glht() aus an 
-# contrMat übergeben? 
-
-data(cholesterol)
-
-mod<-lm(response~trt, data=cholesterol)
-
-comps <- glht(mod, mcp(trt="Dunnett"))
-comps
-
-# wir brauchen oft das: eine andere Kontrolgruppe als die 
-# alpha-numerisch erste
-
-# zB so: comps <- glht(mod, mcp(trt="Dunnett", base=4))
-
-# Im Moment kann ichs nur so:
-
-n <- tapply(cholesterol[,"trt"],cholesterol[,"trt"], length)
-
-conDu4 <- contrMat(n=n, type="Dunnett", base=4)
-
-comps4<-glht(mod, mcp(trt=conDu4))
-comps4
-
-
-################################################
-
-# plots für Konfidenzintervalle
-
-# 1) die xlim in plot wird nur aufgrund der Konfidenzgrenzen definiert.
-# Oft möchte man die estimates selber auch im plot haben.
-
-data(cholesterol)
-
-mod<-lm(response~trt, data=cholesterol)
-
-CI <- confint(glht(mod, mcp(trt="Dunnett"), alternative="less"))
-
-plot(CI)
-
-# 2) die Achsenbeschriftung mit default las=0 ist ein Problem bei
-# vielen Vergleichen und langen Namen.
-
-
-CI <- confint(glht(mod, mcp(trt="Tukey")))
-
-plot(CI)
-
-
-# Im alten multcomp war der default las=2, wobei die
-# der margin über die Länge der Worte eingestellt wurde.
-
-# Dort ging das in etwa so:
-
-	args <- list(...)
-        mymai <- par("mai")
-        ywidth <- 1.5 * max(strwidth(compn, units = "inches", 
-            cex = par("cex.axis")))
-        if (mymai[2] < ywidth) 
-            mymai[2] <- ywidth
-        par(mai = mymai, new = TRUE)
-
-# Ist natürlich auch nicht immer eine Lösung.
-
-
-
-# 3) Kleinigkeit im plot:
-
-# kann man die Überschrift "familywise confidence level" in "local confidence level"
-# oder sowas umändern, wenn adjusted=FALSE?
-
-
 
 #####################################################
 
