@@ -1,6 +1,6 @@
 
-R version 2.5.0 Under development (unstable) (2006-12-04 r40121)
-Copyright (C) 2006 The R Foundation for Statistical Computing
+R version 2.5.0 Under development (unstable) (2007-03-06 r40817)
+Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -731,8 +731,9 @@ Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’
 > 
 > ### Name: glht-methods
 > ### Title: Methods for General Linear Hypotheses
-> ### Aliases: summary.glht confint.glht coef.glht vcov.glht univariate
-> ###   adjusted Ftest Chisqtest adjusted_calpha univariate_calpha
+> ### Aliases: summary.glht confint.glht coef.glht vcov.glht plot.glht
+> ###   plot.confint.glht univariate adjusted Ftest Chisqtest adjusted_calpha
+> ###   univariate_calpha
 > ### Keywords: htest
 > 
 > ### ** Examples
@@ -994,7 +995,7 @@ Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’
 > ### * <FOOTER>
 > ###
 > cat("Time elapsed: ", proc.time() - get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  53.647 0.08 54.226 0 0 
+Time elapsed:  55.567 0.068 56.092 0 0 
 > grDevices::dev.off()
 null device 
           1 
